--- a/i3status.conf
+++ b/i3status.conf
@@ -13,7 +13,7 @@ general {
 
 #order += "run_watch DHCP"
 #order += "
-order += "ethernet eth0"
+order += "ethernet eno1"
 order += "cpu_temperature 0"
 order += "load"
 order += "cpu_usage"
