--- a/config
+++ b/config
@@ -10,12 +10,14 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $sys_scripts ~/Projects/system_scripts/
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:terminus 13
+font pango:DejaVu 13
+#font pango:Terminus 13
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
@@ -24,9 +26,9 @@ font pango:terminus 13
 # font, it doesn’t scale on retina/hidpi displays.
 
 #monitor vars
-set $monitor_left DP-2-1
-set $monitor_center DP-2-2
-set $monitor_right DP-1
+set $monitor_left DP-5
+set $monitor_center DP-0
+set $monitor_right HDMI-0
 
 #outputs/monitors to set on workspace
 workspace $tag1 output $monitor_left
@@ -94,7 +96,7 @@ bindsym $mod+v split v; exec notify-send 'Splitting windows vertically.'
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s exec i3lock -i ~/Pictures/matrix.png -tf ; exec notify-send "LOCK DOWN" #layout stacking; exec notify-send 'Stacking windows.'
+#bindsym $mod+s exec i3lock -i ~/Pictures/matrix.png -tf ; exec notify-send "LOCK DOWN" #layout stacking; exec notify-send 'Stacking windows.'
 bindsym $mod+w layout tabbed; exec notify-send 'Tabbing windows.'
 bindsym $mod+e layout toggle split; exec notify-send 'Splitting windows.'
 
@@ -109,9 +111,8 @@ bindsym $mod+a focus parent
 
 
 # misc keys
-bindsym $mod+c exec firefox
-bindsym $mod+Shift+p exec  sudo s2disk
-bindsym $mod+Ctrl+Shift+p exec  ~/.scripts/shutdown.sh
+bindsym $mod+c exec firefox; exec notify-send 'Starting Firefox'
+bindsym $mod+Ctrl+Shift+p exec  $sys_scripts/shutdown.sh
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -217,27 +218,36 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 #language keys
-bindsym $mod+i exec setxkbmap se
-bindsym $mod+u exec setxkbmap us
-
-#bindsym $mod+Control+h exec pacmd set-default-sink 2 & 
-bindym $mod+n exec ~/Projects/bash/set_layout.sh
+bindsym $mod+i exec $sys_scripts/set_keyboard_layout.sh se
+bindsym $mod+u exec $sys_scripts/set_keyboard_layout.sh us
 
 # Print screen
-bindsym Print exec import -window root `date +%Y-%m-%d_%H:%M`.png && mv `date +%Y-%m-%d_%H:%M`.png ~/Pictures/
+bindsym $mod+p exec $sys_scripts/print_screen.sh
+bindsym Print exec $sys_scripts/print_screen.sh
+#bindysm $mod+p exec $sys_scripts/print_screen.sh
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar 
+bar
 {
 	strip_workspace_numbers yes
-	status_command i3status --config ~/.i3/i3status.conf
+	#status_command i3status --config ~/.i3/i3status.conf
+	status_command exec perl -I ~/Projects/i3_status_bar_perl/ ~/Projects/i3_status_bar_perl/bar.pl
 }
+
+# class / title specific stuff
+#for_window [class="[.]*"] floating disable
+for_window [window_role="pop-up"] floating enable
+for_window [title="Microsoft Teams Notification"] floating enable
+#for window [class="Steam"] floating enable
+for_window [class="feh"] floating enable
+for_window [class="pavucontrol-qt"] floating disable
 
 #new_window pixel 10
 hide_edge_borders both
 
+# set home layout
+bindsym $mod+m exec $sys_scripts/home_layout.sh
 
 #start programs/scripts
-exec ~/Projects/bash/start.sh
-#exec --no-startup-id urxvt -cd "`xcwd`" 'workspace1
+exec $sys_scripts/start.sh
